syntax = "proto3";

package api.rabbit.hook;

import "google/api/annotations.proto";

option go_package = "github.com/aide-family/moon/api/rabbit/hook;hook";
option java_multiple_files = true;
option java_package = "api.rabbit.hook";

// 用于接受外界需要推送的消息
service Hook {
  // 发送消息, 用于接受http数据
  rpc SendMsg (SendMsgRequest) returns (SendMsgReply) {
    option (google.api.http) = {
      post: "/v1/rabbit/send/msg"
      body: "*"
    };
  }
}

message SendMsgRequest {
  // 用于接收外界的数据， 兼容所有json格式
  string json_data = 1;
  // 用于匹配该数据发送给谁
  string route = 2;
}
message SendMsgReply {
  // 发送的结果
  string msg = 1;
  // 状态码
  int32 code = 2;
  // 发送时间
  string time = 3;
}
