syntax = "proto3";

package pkg.conf;

import "google/protobuf/duration.proto";

option go_package = "github.com/aide-family/moon/pkg/conf;conf";

// 服务配置
message Server {
  // 服务名称
  string name = 1;
  // 服务元数据
  map<string, string> metadata = 2;
  // 服务http地址
  string httpEndpoint = 3;
  // grpc地址
  string grpcEndpoint = 4;
  // 网络类型
  string network = 5;
  optional string secret = 6;
  //上线时间
  string startTime = 7;
  //在线时长
  string upTime = 8;
}

// http服务配置
message HTTPServer {
  // 网络类型
  string network = 1;
  // 服务地址
  string addr = 2;
  // 读写超时时间
  google.protobuf.Duration timeout = 3;
}

// grpc服务配置
message GRPCServer {
  // 网络类型
  string network = 1;
  // 服务地址
  string addr = 2;
  // 读写超时时间
  google.protobuf.Duration timeout = 3;
}

// jwt配置
message JWT {
  // 签名密钥
  string sign_key = 1;
  // 签发者
  string issuer = 2;
  // 有效期
  google.protobuf.Duration expire = 4;
  // 被允许的请求
  repeated string allow_list = 5;
}

// 数据库配置
message Database {
  // 驱动， 支持gorm即可
  string driver = 1;
  // 数据库连接串
  string dsn = 2;
  // 是否开启调试
  bool debug = 3;
}

// redis配置
message Redis {
  // 网络类型
  string network = 1;
  // 地址
  string addr = 2;
  // 读写超时
  google.protobuf.Duration read_timeout = 3;
  google.protobuf.Duration write_timeout = 4;
  // 密码
  string password = 5;
  // 数据库
  uint32 db = 6;
  // 连接超时
  google.protobuf.Duration dial_timeout = 7;
}

// nuts db配置
message NutsDB {
  // 数据库路径
  string path = 1;
  // 缓存桶
  string bucket = 2;
}

// 内存缓存配置
message Free {
  // 内存缓存大小
  uint32 size = 1;
}

// 缓存配置
message Cache {
  //redis nuts-db  free
  string driver = 1;
  // redis配置
  Redis redis = 2;
  // nuts db配置
  NutsDB nutsDB = 3;
  // 内存缓存配置
  Free free = 4;
}

// 微服务配置
message MicroServer {
  // 服务地址
  string endpoint = 1;
  // 密钥
  optional string secret = 2;
  // 超时时间
  optional google.protobuf.Duration timeout = 3;
  // 网络类型， http, https, grpc
  string network = 4;
  // node版本
  string nodeVersion = 5;
  // name 服务名
  string name = 6;
}

// jaeger配置
message Jaeger {
  // 端点
  string endpoint = 1;
}

// 链路追踪配置
message Tracer {
  // 驱动， 支持jaeger
  string driver = 1;
  // jaeger配置
  Jaeger jaeger = 2;
}

// ETCD数据源配置
message ETCD {
  // 端点
  repeated string endpoints = 1;
  // 连接超时
  optional google.protobuf.Duration timeout = 2;
  // 用户名
  optional string username = 3;
  // 密码
  optional string password = 4;
}

// 服务注册发现配置
message Discovery {
  // 类型， 名称和数据源保持一致，例如etcd
  string driver = 1;
  // 数据源
  ETCD etcd = 2;
}

// 邮件发送配置
message EmailConfig {
  // 用户
  string user = 1;
  // 发送的邮箱密码
  string pass = 2;
  // 发送的邮箱服务器
  string host = 3;
  // 发送的邮箱端口
  uint32 port = 4;
}

// 邮件目标
message ReceiverEmail {
  // 发送给谁
  string to = 1;
  // 发送的主题
  string subject = 2;
  // 发送的内容， 优先级高于模板
  string content = 3;
  // 发送的模板，内容字段为空时， 以数据填充模板后发送
  string template = 4;
  // 抄送对象
  repeated string cc = 5;
  // 附件URL，一般为oss地址
  repeated string attachUrl = 6;
  // 发送的内容类型
  string contentType = 7;
}

// 电话目标
message ReceiverPhone {
  // 拨打电话
  message Call {}
  // 短信
  message Sms {}
}

// hook目标
message ReceiverHook {
  string type = 1;
  // hook地址
  string webhook = 2;
  // 钉钉消息json内容，支持模板， 优先级高于模板
  string content = 3;
  // 模板
  string template = 4;
  // 加签秘钥
  string secret = 5;
}

message Receiver {
  repeated ReceiverHook hooks = 1;

  repeated ReceiverPhone phones = 2;

  repeated ReceiverEmail emails = 3;

  EmailConfig emailConfig = 4;
}


message Log {
  // default, slog, aliyun, zap
  string type = 1;
  // 日志级别
  string level = 2;

  // 阿里云日志
  optional AliYunLogConfig aliyun = 4;
  // zap日志
  optional ZapLogConfig zap = 5;
  // slog日志
  optional SLogConfig slog = 6;
  // loki日志
  optional LokiLogConfig loki = 7;
}

message AliYunLogConfig {
  string accessKey = 1;
  string accessSecret = 2;
  string endpoint = 3;
  string securityToken = 4;
  string expireTime = 5;
  string project = 6;
  string store = 7;
  // 是否结构化
  bool json = 8;
}

message ZapLogConfig {
  // 是否结构化
  bool json = 1;
}

message SLogConfig {
  bool json = 1;
}

message LokiLogConfig {
  string url = 1;
  string app = 2;
}

// oss相关

// minio
message Minio{
  string endpoint = 1;
  string accessKeyID = 2;
  string accessKeySecret = 3;
  string bucketName = 4;
  // 是否使用https
  bool secure = 5;
}

// tencent oss
message TencentOss{
  string bucketURL = 1;
  string secretID = 2;
  string secretKey = 3;
  int64  expiry = 4;
  string bucketName = 5;
  bool isPublic = 6;
  string region = 7;
}


// ali oss
message AliOss{
  string endpoint = 1;
  string accessKeyID = 2;
  string accessKeySecret = 3;
  string bucketName = 4;
}

// local
message LocalStorage{
  string  path = 1;
  string url = 2;
  string downloadPre = 3;
}

// 文件大小限制
message FileLimit {
  int64 max = 1;
  int64 min = 2;
}

message Oss{
  // oss类型
  string type = 1;
  Minio minio = 2;
  TencentOss tencentOss = 3;
  AliOss aliOss = 4;
  LocalStorage local = 5;
  // 文件大小
  map <string, FileLimit> limitSize = 6;
  // 是否打开oss
  bool open = 7;
}